assets/css/styles.scss
html,
body {
  height: 100%;
}

.text-semibold {
  font-weight: 600;
}

.results-heading {
  font-size: 32px;
  font-weight: 400;
}

.header {
  flex-direction: row;
  align-items: center;
  justify-content: flex-end;
  display: flex;
  padding: 0 0 0.25rem 0.5rem;
  width: 100%;
}

.nav-container {
  display: flex;
  align-items: flex-end;
  justify-content: space-between;
  padding-left: 2rem;
  padding-right: 2rem;
}

.logo {
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.46rem;
  line-height: 1.1;
}

.navbar {
  position: relative;
  width: 33%;
  border-bottom: none;
  display: inline-block;
  height: auto;
}

.translate-button {
  color: #fff;
  background: #000;
  line-height: 0.9;
  padding: 1rem 0 1rem 1rem;
  font-weight: 700;
  font-size: 0.93rem;
}

.goog-te-menu-frame {
  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25) !important;
  min-width: 225px;
}
.goog-te-menu-value {
  font-size: 0 !important;
}

.header-bar__translate {
  position: relative;
}

.header.header--is-open-translate .header-bar__translate {
  background: #000;
  display: block;
}
.header.header--is-open-translate
  .header-bar__translate
  .header-bar__translate-presentation {
  color: #262626;
  font-family: "Open Sans", sans-serif;
  font-size: 16px;
  font-style: normal;
  font-weight: 600;
  letter-spacing: 0.05px;
  line-height: 22px;
}
.header.header--is-open-translate
  .header-bar__translate
  .header-bar__translate-presentation
  img {
  filter: brightness(0) saturate(100%) invert(21%) sepia(0%) saturate(52%)
    hue-rotate(248deg) brightness(87%) contrast(112%);
}
.header-bar__translate-clickable {
  cursor: pointer;
  height: 100%;
  opacity: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 1;
}
.header-bar__translate-clickable .goog-te-gadget,
.header-bar__translate-clickable .goog-te-gadget-simple,
.header-bar__translate-clickable #google_translate_element {
  display: block !important;
  height: 100%;
  width: 100%;
}
.header-bar__translate-presentation {
  align-items: center;
  color: #fff;
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 16px;
  font-style: normal;
  font-weight: 600;
  height: 100%;
  letter-spacing: 0.05px;
  line-height: 22px;
  padding: 10px 0px 10px 10px;

  img {
    margin-right: 6px;
    width: 16px;
  }
}

@media (max-width: 640px) {
  .goog-te-menu-frame {
    width: 100% !important;
  }
}

.container-outer {
  height: 100%;
  min-height: 100%;
}

.usa-footer,
.usa-footer__secondary-section {
  color: #fff;
  background-color: #000;
  overflow: visible;

  a {
    color: #fff;
  }
}

.site-subheading {
  text-transform: uppercase;
}

.usa-header,
.usa-nav {
  background-color: #000;
  color: #fff;
}

.usa-nav__primary button {
  color: #fff;
}

.usa-nav__primary button:hover {
  color: #ddd;
}

.usa-nav.is-visible {
  background-color: #fff;
}

.usa-nav.is-visible .usa-nav__primary button {
  color: #000;
}

.usa-input#search-field {
  border: 0px;
  border-radius: 5px;
  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 1px 0px,
    rgba(61, 59, 53, 0.16) 0px 0px 0px 1px,
    rgba(61, 59, 53, 0.08) 0px 2px 5px 0px;
  background-color: rgba(255, 255, 255, 0.5);
  color: rgb(55, 53, 47);
  caret-color: rgb(55, 53, 47);
}

.usa-button#search-button {
  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 1px 0px,
    rgba(61, 59, 53, 0.16) 0px 0px 0px 1px,
    rgba(61, 59, 53, 0.08) 0px 2px 5px 0px;
}

.usa-search [type=button], .usa-search [type=submit] {
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  height: 2rem;
  margin: 0;
  padding: 0;
  width: 3rem;
}

.usa-search--small .usa-search__submit, .usa-search--small [type=button], .usa-search--small [type=submit] {
  padding-left: .75rem;
  padding-right: .75rem;
  min-width: 3rem;
}

svg.usa-search__submit-icon {
  height: 1.5rem;
  width: 1.5rem;
  display: block;
  filter: invert(1);
}

.usa-search__input [type=submit] {
  padding-bottom: 0;
  padding-top: 0;
  border-bottom-right-radius: 0;
  border-right: none;
  border-top-right-radius: 0;
  box-sizing: border-box;
  float: left;
  font-size: 1rem;
  height: 2rem;
  margin: 0;
}


.usa-social-link__icon {
  filter: brightness(100%);
}

.usa-social-link {
  width: 2rem;
  height: 2rem;
}

.usa-social-link:hover {
  background-color: transparent;
}

.rounded {
  border-radius: 5px;
}

.flex-reverse-row {
  display: flex;
  flex-direction: row-reverse;
}

.image-fit-height {
  height: 100%;
  width: 100%;
  object-fit: cover;
  object-position: center;
}

.image-large {
  height: 450px;
  width: 100%;
  object-fit: cover;
  object-position: center;
}

.image-overlay {
  height: 0;
  width: 0;
}

.metro-section--gray {
  background-color: #F5F7FB;
}

.metro-section--blue {
  background-color: #E5F1FE;
}

.metro-info-card {
  padding: 24px 16px;
  border: 1px solid #DDE6EA;
  border-radius: 10px;
  margin-bottom: 16px;

  .metro-tag {
    color: #fff;
    padding: 4px 16px 4px 16px;
    border-radius: 32px;
    display: inline-block;
  }

  .emoji {
    font-weight: 200;
  }

  .metro-tag--orange {
    background-color: #E28B41;
  }

  .metro-tag--gray {
    background-color: #8B96A1;
  }

  .metro-tag--blue {
    background-color: #105EDA;
  }

  .metro-info-heading {
    font-size: 24px;
    font-weight: bold;
    margin: 16px 0px;
  }
}

h1 {
  font-size: 64px;
}

h2 {
  font-size: 36px;
}

@media screen and (max-width: 640px) {
  h1 {
    font-size: 48px;
  }
  h2 {
    font-weight: 600;
    font-size: 32px;
  }
  .image-large {
    height: 300px;
  }
  .image-overlay {
    position:absolute;
    bottom:0;
    height:40px;
    width:100%;
    border-top-right-radius:40px;
    z-index:100;
    background-color:#E5F1FE;
  }
}

